[package]
name = "restful-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.1"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
mongodb = "3.2.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
